--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,261 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="241dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="86dp"
+        android:layout_marginTop="749dp"
+        android:backgroundTint="#D87A7A"
+        android:fontFamily="@font/red_rose"
+        android:lineHeight="17dp"
+        android:text="Оплатить покупку"
+        android:textColor="#2E2D2D"
+        android:textFontWeight="400"
+        android:textSize="14dp"
+        android:textStyle="normal"
+        app:cornerRadius="5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/textView4"
+        android:layout_width="112dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="681dp"
+        android:fontFamily="@font/red_rose"
+        android:lineHeight="22dp"
+        android:text="400 рублей"
+        android:textColor="#2E2D2D"
+        android:textFontWeight="700"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="112dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="448dp"
+        android:fontFamily="@font/red_rose"
+        android:lineHeight="22dp"
+        android:text="400 рублей"
+        android:textColor="#2E2D2D"
+        android:textFontWeight="700"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="112dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="236dp"
+        android:fontFamily="@font/red_rose"
+        android:lineHeight="22dp"
+        android:text="450 рублей"
+        android:textColor="#2E2D2D"
+        android:textFontWeight="700"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="7dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="237dp"
+        android:layout_marginTop="680dp"
+        android:fontFamily="@font/red_rose"
+        android:lineHeight="22dp"
+        android:text="1"
+        android:textColor="#2E2D2D"
+        android:textFontWeight="700"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="7dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="243dp"
+        android:layout_marginTop="447dp"
+        android:fontFamily="@font/red_rose"
+        android:lineHeight="22dp"
+        android:text="1"
+        android:textColor="#2E2D2D"
+        android:textFontWeight="700"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="7dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="249dp"
+        android:layout_marginTop="235dp"
+        android:fontFamily="@font/red_rose"
+        android:lineHeight="22dp"
+        android:text="1"
+        android:textColor="#2E2D2D"
+        android:textFontWeight="700"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="127dp"
+        android:layout_height="129dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="520dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/rectangle_41" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="127dp"
+        android:layout_height="129dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="286dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/rectangle_30" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="127dp"
+        android:layout_height="129dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="81dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/rectangle_29" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="93dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="159dp"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/red_rose"
+        android:lineHeight="25dp"
+        android:text="Корзина"
+        android:textAlignment="center"
+        android:textColor="#2E2D2D"
+        android:textFontWeight="700"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="71dp"
+        android:layout_height="18dp"
+        android:layout_marginStart="181dp"
+        android:layout_marginTop="94dp"
+        android:fontFamily="@font/red_rose"
+        android:lineHeight="20dp"
+        android:text="Блю чиз"
+        android:textColor="#2E2D2D"
+        android:textFontWeight="700"
+        android:textSize="16dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="200dp"
+        android:layout_height="71dp"
+        android:layout_marginStart="181dp"
+        android:layout_marginTop="126dp"
+        android:fontFamily="@font/red_rose"
+        android:lineHeight="15dp"
+        android:text="Идеальное сочетание: нежное куриное филе с кусочками сыра блю чиз, соусом Пармеджано, смесью итальянских сыров и сыром Моцарелла"
+        android:textColor="#2E2D2D"
+        android:textFontWeight="400"
+        android:textSize="12dp"
+        android:textStyle="normal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="145dp"
+        android:layout_height="18dp"
+        android:layout_marginStart="181dp"
+        android:layout_marginTop="300dp"
+        android:fontFamily="@font/red_rose"
+        android:lineHeight="20dp"
+        android:text="Ветчина и грибы"
+        android:textColor="#2E2D2D"
+        android:textFontWeight="700"
+        android:textSize="16dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="200dp"
+        android:layout_height="58dp"
+        android:layout_marginStart="181dp"
+        android:layout_marginTop="332dp"
+        android:fontFamily="@font/red_rose"
+        android:lineHeight="15dp"
+        android:text="Нежная пицца с соусом (Чесночный Рэнч), Моцареллой, шампиньонами, ароматной ветчиной и чесноком"
+        android:textColor="#2E2D2D"
+        android:textFontWeight="400"
+        android:textSize="12dp"
+        android:textStyle="normal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="62dp"
+        android:layout_height="18dp"
+        android:layout_marginStart="175dp"
+        android:layout_marginTop="533dp"
+        android:fontFamily="@font/red_rose"
+        android:lineHeight="20dp"
+        android:text="4 сыра"
+        android:textColor="#2E2D2D"
+        android:textFontWeight="700"
+        android:textSize="16dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="200dp"
+        android:layout_height="72dp"
+        android:layout_marginStart="175dp"
+        android:layout_marginTop="565dp"
+        android:fontFamily="@font/red_rose"
+        android:lineHeight="15dp"
+        android:text="Традиционное сочетание сыров: Моцарелла, мягкий молодой сыр, сыр с голубой плесенью, Реджанито, фирменный томатный соус и орегано"
+        android:textColor="#2E2D2D"
+        android:textFontWeight="400"
+        android:textSize="12dp"
+        android:textStyle="normal"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
