--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
     <TextView
         android:id="@+id/textView4"
         android:layout_width="112dp"
-        android:layout_height="17dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="18dp"
         android:layout_marginTop="681dp"
         android:fontFamily="@font/red_rose"
@@ -43,7 +43,7 @@
     <TextView
         android:id="@+id/textView6"
         android:layout_width="112dp"
-        android:layout_height="17dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="448dp"
         android:fontFamily="@font/red_rose"
@@ -53,13 +53,14 @@
         android:textFontWeight="700"
         android:textSize="18dp"
         android:textStyle="bold"
+        android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="112dp"
-        android:layout_height="17dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="236dp"
         android:fontFamily="@font/red_rose"
@@ -69,13 +70,14 @@
         android:textFontWeight="700"
         android:textSize="18dp"
         android:textStyle="bold"
+        android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="7dp"
-        android:layout_height="17dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="237dp"
         android:layout_marginTop="680dp"
         android:fontFamily="@font/red_rose"
@@ -85,13 +87,14 @@
         android:textFontWeight="700"
         android:textSize="18dp"
         android:textStyle="bold"
+        android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="7dp"
-        android:layout_height="17dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="243dp"
         android:layout_marginTop="447dp"
         android:fontFamily="@font/red_rose"
@@ -100,6 +103,7 @@
         android:textColor="#2E2D2D"
         android:textFontWeight="700"
         android:textSize="18dp"
+        android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -107,7 +111,7 @@
     <TextView
         android:id="@+id/textView8"
         android:layout_width="7dp"
-        android:layout_height="17dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="249dp"
         android:layout_marginTop="235dp"
         android:fontFamily="@font/red_rose"
@@ -116,6 +120,7 @@
         android:textColor="#2E2D2D"
         android:textFontWeight="700"
         android:textSize="18dp"
+        android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -153,7 +158,7 @@
     <TextView
         android:id="@+id/textView10"
         android:layout_width="93dp"
-        android:layout_height="19dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="159dp"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/red_rose"
@@ -170,7 +175,7 @@
     <TextView
         android:id="@+id/textView11"
         android:layout_width="71dp"
-        android:layout_height="18dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="181dp"
         android:layout_marginTop="94dp"
         android:fontFamily="@font/red_rose"
@@ -186,7 +191,7 @@
     <TextView
         android:id="@+id/textView12"
         android:layout_width="200dp"
-        android:layout_height="71dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="181dp"
         android:layout_marginTop="126dp"
         android:fontFamily="@font/red_rose"
@@ -202,7 +207,7 @@
     <TextView
         android:id="@+id/textView13"
         android:layout_width="145dp"
-        android:layout_height="18dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="181dp"
         android:layout_marginTop="300dp"
         android:fontFamily="@font/red_rose"
@@ -218,7 +223,7 @@
     <TextView
         android:id="@+id/textView14"
         android:layout_width="200dp"
-        android:layout_height="58dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="181dp"
         android:layout_marginTop="332dp"
         android:fontFamily="@font/red_rose"
@@ -234,7 +239,7 @@
     <TextView
         android:id="@+id/textView15"
         android:layout_width="62dp"
-        android:layout_height="18dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="175dp"
         android:layout_marginTop="533dp"
         android:fontFamily="@font/red_rose"
@@ -250,7 +255,7 @@
     <TextView
         android:id="@+id/textView16"
         android:layout_width="200dp"
-        android:layout_height="72dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="175dp"
         android:layout_marginTop="565dp"
         android:fontFamily="@font/red_rose"
